Entrega final - navbar, hero y animaciones

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <body>
 
     <header>
-
         <!-- Navbar ok-->
         <nav class="navbar">
             <div class="navbar-container">
@@ -38,88 +37,127 @@
 
             </div>
         </nav>
+    </header>
+
+    <!-- Nuevo-3 entrega - sumé un main -->
+    <main>
 
         <!-- Hero -->
         <section class="hero">
+
             <div class="hero-contenedor">
                 <h3 class="hero-subtitulo">Hola, soy Lina 👋</h3>
-                <h1 class="hero-titulo">Haciendo de la tecnología una experiencia cercana, intuitiva y con propósito
+                <h1 class="hero-titulo">Diseño experiencias digitales que se sientan cercanas, intuitivas y con
+                    propósito estratégico
                 </h1>
+            </div>
+
+            <img src="assets/imagen-avatar-gris.png" alt="" class="hero-fondo" />
+        </section>
+
+        <!--Sección:MIs proyectos ok -->
+
+        <section class="proyectos">
+            <h2 class="titulo-seccion">Conoce mis proyectos</h2>
+
+            <div class="contenedor-proyectos">
+
+                <!-- Proyecto 1 -->
+                <article class="tarjeta-proyecto">
+                    <div class="contenedor-imagen">
+                        <img src="assets/Project Cover.png" alt="Descripción proyecto 1" class="imagen-proyecto">
+                    </div>
+
+                    <h3 class="titulo-proyecto">Proyecto 1</h3>
+                    <p class="descripcion-proyecto">
+                        Nibh tellus ut suspendisse porttitor. Vivamus sit tincidunt bibendum a etiam fringilla quis
+                        nisl.
+                    </p>
+                </article>
+
+                <!-- Proyecto 2 -->
+                <article class="tarjeta-proyecto">
+                    <div class="contenedor-imagen">
+                        <img src="assets/Project Cover.png" alt="Descripción proyecto 2" class="imagen-proyecto">
+                    </div>
+
+                    <h3 class="titulo-proyecto">Proyecto 2</h3>
+                    <p class="descripcion-proyecto">
+                        Luctus adipiscing mattis non mi, sollicitudin dapibus ullamcorper id interdum.</p>
+                </article>
+            </div>
+
+            <button class="boton-ver-todos"><a href="page/proyectos.html" class="btn">Ver todos</a></button>
+
+        </section>
+
+
+        <!--Sección:Mis servicios - modificado 3 entrega -->
+        <section class="mis-servicios-home">
+            <div class="mis-servicios-grid-home">
+                <!-- COLUMNA 1 - TEXTO -->
+                <div class="columna-texto-home">
+                    <div class="contenido-columna1 no-espaciado">
+                        <h2 class="titulo-columna1">Lo que hago</h2>
+                        <p class="parrafo-columna1">Diseño soluciones digitales con criterio, empatía y foco en lo que
+                            cada producto necesita para crecer.</p>
+                    </div>
+                </div>
+
+                <!-- COLUMNA 2 - CUADRO SIMPLE -->
+                <div class="cuadro-azul-simple-home">
+                    <div class="contenido-columna2 no-espaciado">
+                        <h3 class="titulo-columna2">Experiencias digitales</h3>
+                        <p class="parrafo-columna2">De la idea al flujo. Diseño con empatía, claridad y visión
+                            estratégica.</p>
+                    </div>
+                </div>
+
+                <!-- COLUMNA 3 - 2 CUADROS APILADOS -->
+                <div class="contenedor-doble-home">
+                    <div class="cuadro-azul-doble-home">
+                        <div class="contenido-columna3">
+                            <h3 class="titulo-columna3">Diseño conversacional</h3>
+                            <p class="parrafo-columna3">Diseño chatbots que acompañan, informan y venden con
+                                personalidad.</p>
+                        </div>
+                    </div>
+                    <div class="cuadro-azul-doble-home">
+                        <div class="contenido-columna3">
+                            <h3 class="titulo-columna3">UI y sistemas de diseño</h3>
+                            <p class="parrafo-columna3">Interfaces claras, escalables y con criterio de sistema.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
-    </header>
-
-
-    <!--Sección:MIs proyectos ok -->
-
-    <section class="proyectos">
-        <h2 class="titulo-seccion">Conoce mis proyectos</h2>
-
-        <div class="contenedor-proyectos">
-
-            <!-- Proyecto 1 -->
-            <article class="tarjeta-proyecto">
-                <div class="contenedor-imagen">
-                    <img src="assets/Project Cover.png" alt="Descripción proyecto 1" class="imagen-proyecto">
-                </div>
-
-                <h3 class="titulo-proyecto">Proyecto 1</h3>
-                <p class="descripcion-proyecto">
-                    Nibh tellus ut suspendisse porttitor. Vivamus sit tincidunt bibendum a etiam fringilla quis nisl.
-                </p>
-            </article>
-
-            <!-- Proyecto 2 -->
-            <article class="tarjeta-proyecto">
-                <div class="contenedor-imagen">
-                    <img src="assets/Project Cover.png" alt="Descripción proyecto 2" class="imagen-proyecto">
-                </div>
-
-                <h3 class="titulo-proyecto">Proyecto 2</h3>
-                <p class="descripcion-proyecto">
-                    Luctus adipiscing mattis non mi, sollicitudin dapibus ullamcorper id interdum.</p>
-            </article>
-        </div>
-
-        <button class="boton-ver-todos"><a href="page/proyectos.html" class="btn">Ver todos</a></button>
-
-    </section>
-
-
-    <!--Sección:Mis servicios -->
-    <section class="mis-servicios">
-        <H2>Mis servicios </H2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec feugiat fringilla lorem sed bibendum.</p>
-    </section>
 
 
 
-    <!--Sobre mi - Home NUEVO -->
-    <section class="sobre-mi-home">
-        <div class="container-sobre-mi-home">
-            <h2 class="sobre-mi-titulo2">Sobre mí</h2>
+        <!--Sobre mi - Home -correciones 3 entrega -->
 
-            <div class="sobre-mi-home-grid">
-                <!-- Columna izquierda -->
-                <div class="sobre-mi-content">
-                    <p class="sobre-mi-texto">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc odio in et, lectus sit lorem id
-                        integer.
-                        Nunc odio in et, lectus sit lorem id integer. Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit.
+        <section class="sobre-mi-seccion-home">
+            <div class="sobre-mi-contenedor-seccion-home">
+
+                <!-- Columna izquierda - Texto -->
+                <div class="texto-contenido-seccion-home">
+                    <h2 class="sobre-mi-titulo-seccion-home">Desde la publicidad al UX, mi camino profesional siempre
+                        estuvo guiado por una idea: diseñar con intención</h2>
+                    <p class="sobre-mi-subtitulo-seccion-home">
+                        Te invito a conocer cómo llegué a crear experiencias digitales claras, humanas y alineadas al
+                        negocio.
                     </p>
-                    <button class="boton-conocer-mas-home"><a href="page/sobre-mi.html" class="btn">Conocer
-                            más</a></button>
+                    <a href="page/sobre-mi.html" class="boton-saber-mas">Saber más</a>
                 </div>
 
-                <!-- Columna derecha -->
-                <div class="sobre-mi-imagen-container">
-                    <img src="assets/Project Cover.png" alt="Imagen sobre mí" class="sobre-mi-imagen">
+                <!-- Columna derecha - Imagen -->
+                <div class="imagen-contenedor-seccion-home">
+                    <img src="assets/imagen-avatar-2.png" alt="Descripción" class="sobre-mi-imagen">
                 </div>
-            </div>
-        </div>
-    </section>
+
+
+    </main>
 
 
 
