Subo versión final con SEO, textos actualizados,ajustes mobile y nuevas imágenes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
 
     <title>Lina Andrada</title>
+    <title>Portfolio de Lina Andrada | Diseño de experiencias digitales</title>
+    <meta name="description"
+        content="Portfolio de Lina Andrada. Diseño de experiencias digitales, estrategia de contenido y diseño conversacional.">
+    <meta name="keywords"
+        content="UX, UI, diseño UX, diseño UI, estrategia de contenido, diseño conversacional, marketplaces, sistemas de diseño, Lina Andrada, diseño digital">
+
 </head>
 
 
@@ -55,84 +61,75 @@
             <img src="assets/imagen-avatar-gris.png" alt="" class="hero-fondo" />
         </section>
 
-        <!--Sección:MIs proyectos ok -->
+        <!--Sección:MIs proyectos -home- cambios entrega final -->
 
         <section class="proyectos">
-            <h2 class="titulo-seccion">Conoce mis proyectos</h2>
+            <div class="proyectos-wrapper">
 
-            <div class="contenedor-proyectos">
+                <h2 class="titulo-seccion">Conoce mis proyectos</h2>
 
-                <!-- Proyecto 1 -->
-                <article class="tarjeta-proyecto">
-                    <div class="contenedor-imagen">
-                        <img src="assets/Project Cover.png" alt="Descripción proyecto 1" class="imagen-proyecto">
-                    </div>
+                <div class="contenedor-proyectos">
 
-                    <h3 class="titulo-proyecto">Proyecto 1</h3>
-                    <p class="descripcion-proyecto">
-                        Nibh tellus ut suspendisse porttitor. Vivamus sit tincidunt bibendum a etiam fringilla quis
-                        nisl.
-                    </p>
-                </article>
+                    <!-- Proyecto 1 -->
+                    <article class="tarjeta-proyecto">
+                        <div class="contenedor-imagen">
+                            <img src="assets/imagen-ecosistema2.png" alt="Proyecto 1" class="imagen-proyecto">
+                        </div>
+                        <h3 class="titulo-proyecto">Ecosistema de contenido en marketplaces</h3>
+                        <p class="descripcion-proyecto">Diseñé un ecosistema de contenido unificado para marketplaces
+                            digitales, conectando tienda, e-mails y chatbots con una narrativa coherente.</p>
+                    </article>
 
-                <!-- Proyecto 2 -->
-                <article class="tarjeta-proyecto">
-                    <div class="contenedor-imagen">
-                        <img src="assets/Project Cover.png" alt="Descripción proyecto 2" class="imagen-proyecto">
-                    </div>
+                    <!-- Proyecto 2 -->
+                    <article class="tarjeta-proyecto">
+                        <div class="contenedor-imagen">
+                            <img src="assets/imagen-estados2.png" alt="Proyecto 2" class="imagen-proyecto">
+                        </div>
+                        <h3 class="titulo-proyecto">Optimización de estados de pedidos en marketplaces</h3>
+                        <p class="descripcion-proyecto">Rediseñé el flujo de estados de pedido en marketplaces
+                            digitales, simplificando procesos y mejorando la experiencia de vendedores y compradores.
+                        </p>
+                    </article>
 
-                    <h3 class="titulo-proyecto">Proyecto 2</h3>
-                    <p class="descripcion-proyecto">
-                        Luctus adipiscing mattis non mi, sollicitudin dapibus ullamcorper id interdum.</p>
-                </article>
+                </div>
+
+                <a href="page/proyectos.html" class="boton-ver-todos">Ver todos</a>
+
             </div>
-
-            <button class="boton-ver-todos"><a href="page/proyectos.html" class="btn">Ver todos</a></button>
-
         </section>
 
 
-        <!--Sección:Mis servicios - modificado 3 entrega -->
+
+        <!--Sección:Mis servicios - Home - modificado 3 entrega -->
+
         <section class="mis-servicios-home">
-            <div class="mis-servicios-grid-home">
-                <!-- COLUMNA 1 - TEXTO -->
+            <div class="mis-servicios-wrapper-home">
+
+                <!-- Columna izquierda - texto -->
                 <div class="columna-texto-home">
-                    <div class="contenido-columna1 no-espaciado">
-                        <h2 class="titulo-columna1">Lo que hago</h2>
-                        <p class="parrafo-columna1">Diseño soluciones digitales con criterio, empatía y foco en lo que
-                            cada producto necesita para crecer.</p>
+                    <h2 class="mis-servicios-titulo-home">Mis servicios</h2>
+                    <p class="mis-servicios-subtitulo-home">
+                        Diseño soluciones digitales con criterio, empatía y foco en lo que cada producto necesita para
+                        crecer.
+                    </p>
+                    <a href="page/servicios.html" class="boton-saber-mas">Ir a servicios</a>
+                </div>
+
+                <!-- Columna derecha - bloques -->
+                <div class="columna-bloques-home">
+                    <div class="cuadro-azul-left card-animada">
+                        <h3>Experiencias digitales</h3>
+                    </div>
+                    <div class="cuadro-azul-right card-animada">
+                        <h3>Diseño conversacional</h3>
+                    </div>
+                    <div class="cuadro-azul-right card-animada">
+                        <h3>UI y sistemas de diseño</h3>
                     </div>
                 </div>
 
-                <!-- COLUMNA 2 - CUADRO SIMPLE -->
-                <div class="cuadro-azul-simple-home">
-                    <div class="contenido-columna2 no-espaciado">
-                        <h3 class="titulo-columna2">Experiencias digitales</h3>
-                        <p class="parrafo-columna2">De la idea al flujo. Diseño con empatía, claridad y visión
-                            estratégica.</p>
-                    </div>
-                </div>
-
-                <!-- COLUMNA 3 - 2 CUADROS APILADOS -->
-                <div class="contenedor-doble-home">
-                    <div class="cuadro-azul-doble-home">
-                        <div class="contenido-columna3">
-                            <h3 class="titulo-columna3">Diseño conversacional</h3>
-                            <p class="parrafo-columna3">Diseño chatbots que acompañan, informan y venden con
-                                personalidad.</p>
-                        </div>
-                    </div>
-                    <div class="cuadro-azul-doble-home">
-                        <div class="contenido-columna3">
-                            <h3 class="titulo-columna3">UI y sistemas de diseño</h3>
-                            <p class="parrafo-columna3">Interfaces claras, escalables y con criterio de sistema.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
-
-
 
 
         <!--Sobre mi - Home -correciones 3 entrega -->
@@ -155,7 +152,6 @@
                 <div class="imagen-contenedor-seccion-home">
                     <img src="assets/imagen-avatar-2.png" alt="Descripción" class="sobre-mi-imagen">
                 </div>
-
 
     </main>
 
